# symmetrical-broccoli

./: .gitignore  main.ipynb  main2.ipynb  model.ipynb  pyproject.toml
