[project]
name = "ex12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.1.0",
    "ipykernel>=6.29.5",
    "markupsafe==3.0.2",
    "protobuf>=5.28.3",
    "scikit-learn>=1.5.2",
    "transformers>=4.46.3",
]
